feat: add option to leave meetup
